--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,9 @@
         <h1>Menus Responsivos</h1>
         <p>
             <a href="./menu-1/menu-1.html">Menu 1</a>
+        </p>
+        <p>
+            <a href="./menu-2/menu-2.html">Menu 2</a>
         </p>
     </main>
     <script src="./assets/scripts/script.js"></script>
