--- a/menu-1/menu-1.html
+++ b/menu-1/menu-1.html
@@ -43,6 +43,9 @@
            <button class="login-button">Entrar</button>
         </div>
     </header>
+    <p class="return">
+        <a href="../index.html">Voltar</a>
+    </p>
     <script src="../assets/scripts/script-menu-1.js"></script>
 </body>
 </html>
