--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p>
             <a href="./menu-2/menu-2.html">Menu 2</a>
         </p>
+        <p>
+            <a href="./menu-3/menu-3.html">Menu 3</a>
+        </p>
     </main>
     <script src="./assets/scripts/script.js"></script>
 </body>
