--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <p>
             <a href="./menu-3/menu-3.html">Menu 3</a>
         </p>
+        <p>
+            <a href="./menu-4/menu-4.html">Menu 4</a>
+        </p>
     </main>
     <script src="./assets/scripts/script.js"></script>
 </body>
