--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p>
             <a href="./menu-4/menu-4.html">Menu 4</a>
         </p>
+        <p>
+            <a href="./menu-5/menu-5.html">Menu 5</a>
+        </p>
     </main>
     <script src="./assets/scripts/script.js"></script>
 </body>
