--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <p>
             <a href="./menu-5/menu-5.html">Menu 5</a>
         </p>
+        <p>
+            <a href="./menu-6/menu-6.html">Menu 6</a>
+        </p>
     </main>
-    <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
