--- a/menu-5/menu-5.html
+++ b/menu-5/menu-5.html
@@ -30,6 +30,9 @@
             </button>
         </nav>
     </header>
+    <p class="return">
+        <a href="../index.html">Voltar</a>
+    </p>
     <script src="../assets/scripts/script-menu-5.js"></script>
 </body>
 </html>
