--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <p>
             <a href="./menu-6/menu-6.html">Menu 6</a>
         </p>
+        <p>
+            <a href="./menu-7/menu-7.html">Menu 7</a>
+        </p>
     </main>
 </body>
 </html>
